--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 /spec/examples.txt
 /test/tmp/
 /test/version_tmp/
-/tmp/
-/log/*
+*//tmp/
+*/log/*
 
 # Used by dotenv library to load environment variables.
 # .env
