Fixing startup issue
where if node hasn’t installed modules yet the development webserver will not start

--- a/rad-ui-react/docker-compose.yml
+++ b/rad-ui-react/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     image: node
-    command: yarn start
+    command: bash -c "npm install && yarn start"
     working_dir: /app
     volumes:
       - .:/app
