Rad ui ember permissions (#7)
* Adding npm install to `web` docker-compose service

* Graphcool project bump

* Exposing livereload port

* Adding a WIP login flow

* bump dependencies

* Room bookings component

needs to be singular

--- a/rad-ui-ember/docker-compose.yml
+++ b/rad-ui-ember/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3'
 services:
   web:
     image: node
-    command: yarn start
+    command: bash -c 'npm install && yarn start'
     working_dir: /rad-ui
     volumes:
       - .:/rad-ui
     ports:
-      - "4200:4200"
+      - 4200:4200
+      - 49153:49153
 
   console:
     image: node
