--- a/rad-ui-ember/docker-compose.yml
+++ b/rad-ui-ember/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: node
+    image: danlynn/ember-cli
     command: bash -c 'npm install && yarn start'
     working_dir: /rad-ui
     volumes:
@@ -11,8 +11,15 @@ services:
       - 49153:49153
 
   console:
-    image: node
-    command: bash -c 'npm install -g ember-cli && /bin/bash'
+    image: danlynn/ember-cli
+    command: /bin/bash
+    working_dir: /rad-ui
+    volumes:
+      - .:/rad-ui
+
+  tests:
+    image: danlynn/ember-cli
+    command: ember test --server
     working_dir: /rad-ui
     volumes:
       - .:/rad-ui
